fix headerspacing

--- a/_static/starterkit.css
+++ b/_static/starterkit.css
@@ -1,3 +1,12 @@
+
+h2 {
+    margin-top: 20pt;
+}
+
+h3 {
+    margin-top: 20pt;
+}
+
 p {
     margin-top: 0;
     margin-bottom: .85em;
